# Safecity

./: .env  README.md  app.py  pyproject.toml  requirements.txt
data/processed/: safecity.parquet
data/raw/: departments.geojson
notebooks/: exploration.ipynb
notebooks/.ipynb_checkpoints/: exploration-checkpoint.ipynb
pipeline/: config.py  fetcher.py  main.py  storage.py  transformer.py
streamlit_app/: app.py
