[project]
name = "safecity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.12.0",
    "fastparquet>=2024.11.0",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "isort>=7.0.0",
    "litellm>=1.80.10",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "streamlit>=1.52.2",
    "tqdm>=4.67.1",
]
